[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.26"
pretty_env_logger = "0.4.0"
tokio = { version = "1.25.0", features = ["full"] }
warp = "0.3.3"
